--- a/second-login/css-file/style2.css
+++ b/second-login/css-file/style2.css
@@ -770,7 +770,9 @@ footer {
 @media (max-width: 360px) {
   nav {
     width: 100%;
+    overflow: hidden;
   }
+  
 
   .hero {
     height: 130vh;
